[project]
name = "cs2821r-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "pytest>=9.0.1",
    "Pillow>=11.1.0",
    "inputimeout>=1.0.4",
    "termcolor>=3.2.0",
    "docstring-parser>=0.17.0",
    "fsspec>=2025.10.0",
    "mammoth>=1.11.0",
    "markdownify>=1.2.2",
    "pandas>=2.3.3",
    "pdfminer-six>=20231228",
]

[tool.pytest.ini_options]
markers = [
  "integration: integration tests that may call external services like Gemini"
]
